tests/algorithms/x/C/graphs/tests/test_min_spanning_tree_prim.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t prims_algorithm_len;

size_t append_len;
static int contains_map_int(const int keys[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return 1;
    }
    return 0;
}

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

typedef struct { int *keys; void **vals; size_t *lens; size_t len; size_t cap; } MapIL;

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

typedef struct { int *keys; int *vals; size_t len; size_t cap; } MapII;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static void map_set_si(MapSI *m, const char *key, int val) {
    for (size_t i = 0; i < m->len; i++) {
        if (strcmp(m->keys[i], key) == 0) { m->vals[i] = val; return; }
    }
    if (m->len >= m->cap) {
        m->cap = m->cap ? m->cap * 2 : 16;
        m->keys = realloc((void*)m->keys, m->cap * sizeof(char*));
        m->vals = realloc(m->vals, m->cap * sizeof(int));
    }
    m->keys[m->len] = key; m->vals[m->len] = val; m->len++;
}

static int map_get_ii(const int keys[], const int vals[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return vals[i];
    }
    return 0;
}

static void map_set_ii(MapII *m, int key, int val) {
    for (size_t i = 0; i < m->len; i++) {
        if (m->keys[i] == key) { m->vals[i] = val; return; }
    }
    if (m->len >= m->cap) {
        m->cap = m->cap ? m->cap * 2 : 16;
        m->keys = realloc(m->keys, m->cap * sizeof(int));
        m->vals = realloc(m->vals, m->cap * sizeof(int));
    }
    m->keys[m->len] = key; m->vals[m->len] = val; m->len++;
}

static void* map_get_il(const int keys[], void *vals[], const size_t lens[], size_t len, int key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static size_t map_len_il(const int keys[], void *const vals[], const size_t lens[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) { if (vals[i] == NULL) return 0; return lens[i]; }
    }
    return 0;
}

static void map_set_il(int **keys, void ***vals, size_t **lens, size_t *len, size_t *cap, int key, void *val, size_t val_len) {
    for (size_t i = 0; i < *len; i++) {
        if ((*keys)[i] == key) { (*vals)[i] = val; (*lens)[i] = val_len; return; }
    }
    if (*len >= *cap) {
        *cap = *cap ? *cap * 2 : 16;
        *keys = realloc(*keys, *cap * sizeof(int));
        *vals = realloc(*vals, *cap * sizeof(void*));
        *lens = realloc(*lens, *cap * sizeof(size_t));
    }
    (*keys)[*len] = key; (*vals)[*len] = val; (*lens)[*len] = val_len; (*len)++;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    append_len = len + 1;
    return res;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct EdgePair EdgePair;
typedef struct Neighbor Neighbor;

struct EdgePair {
    long long u;
    long long v;
};

struct Neighbor {
    long long node;
    long long cost;
};

static EdgePair* list_append_EdgePair(EdgePair *arr, size_t *len, EdgePair val) {
    arr = realloc(arr, (*len + 1) * sizeof(EdgePair));
    arr[*len] = val;
    (*len)++;
    return arr;
}

EdgePair * prims_algorithm(int adjacency);
long long test_prim_successful_result();
int main(void);

EdgePair * prims_algorithm(int adjacency) {
    MapII visited = { NULL, NULL, 0, 0 };
    map_set_ii(&visited, 0LL, 1LL);
    EdgePair *mst = NULL;
    size_t mst_len = 0;
    long long count = 1LL;
    long long total = 0LL;
    for (size_t __i = 0; __i < adjacency.len; __i++) {
        int k = adjacency.keys[__i];
        total = total + 1LL;
    }
    while (count < total) {
        long long best_u = 0LL;
        long long best_v = 0LL;
        long long best_cost = 2147483647LL;
        for (size_t __i = 0; __i < adjacency.len; __i++) {
            int u_str = adjacency.keys[__i];
            long long u = (int)(u_str);
            if (map_get_ii(visited.keys, visited.vals, visited.len, u)) {
                {
                    Neighbor* __tmp0 = map_get_il(adjacency.keys, adjacency.vals, adjacency.lens, adjacency.len, u, NULL);
                    size_t __tmp0_len = adjacency.lens[u];
                    for (size_t __i = 0; __i < __tmp0_len; __i++) {
                        Neighbor n = __tmp0[__i];
                        if (!(map_get_ii(visited.keys, visited.vals, visited.len, n.node)) && (n.cost < best_cost)) {
                            best_cost = n.cost;
                            best_u = u;
                            best_v = n.node;
                        }
                    }
                }
            }
        }
        map_set_ii(&visited, best_v, 1LL);
        mst = list_append_EdgePair(mst, &mst_len, (EdgePair){.u = best_u, .v = best_v});
        count = count + 1LL;
    }
    return prims_algorithm_len = mst_len, mst;
}

long long test_prim_successful_result() {
    long long edges_0[3] = {0LL, 1LL, 4LL};
    long long edges_1[3] = {0LL, 7LL, 8LL};
    long long edges_2[3] = {1LL, 2LL, 8LL};
    long long edges_3[3] = {7LL, 8LL, 7LL};
    long long edges_4[3] = {7LL, 6LL, 1LL};
    long long edges_5[3] = {2LL, 8LL, 2LL};
    long long edges_6[3] = {8LL, 6LL, 6LL};
    long long edges_7[3] = {2LL, 3LL, 7LL};
    long long edges_8[3] = {2LL, 5LL, 4LL};
    long long edges_9[3] = {6LL, 5LL, 2LL};
    long long edges_10[3] = {3LL, 5LL, 14LL};
    long long edges_11[3] = {3LL, 4LL, 9LL};
    long long edges_12[3] = {5LL, 4LL, 10LL};
    long long edges_13[3] = {1LL, 7LL, 11LL};
    long long *edges_init[14] = {edges_0, edges_1, edges_2, edges_3, edges_4, edges_5, edges_6, edges_7, edges_8, edges_9, edges_10, edges_11, edges_12, edges_13};
    long long **edges = edges_init;
    size_t edges_len = 14;
    size_t edges_lens_init[14] = {3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3};
    size_t *edges_lens = edges_lens_init;
    size_t edges_lens_len = 14;
    static int adjacency_keys[16] = {};
    static void* adjacency_vals[16] = {};
    static size_t adjacency_lens[16] = {};
    size_t adjacency_len = 0;
    MapIL adjacency = { adjacency_keys, adjacency_vals, adjacency_lens, 0, 16 };
    for (size_t __i = 0; __i < edges_len; __i++) {
        long long *e = edges[__i];
        size_t e_len = edges_lens[__i];
        long long u = e[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
        long long v = e[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
        long long w = e[(int)({long long _mochi_idx = 2LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
        if (!(contains_map_int(adjacency.keys, adjacency.len, u))) {
            map_set_il(&adjacency.keys, &adjacency.vals, &adjacency.lens, &adjacency.len, &adjacency.cap, u, NULL, 0);
        }
        if (!(contains_map_int(adjacency.keys, adjacency.len, v))) {
            map_set_il(&adjacency.keys, &adjacency.vals, &adjacency.lens, &adjacency.len, &adjacency.cap, v, NULL, 0);
        }
        map_set_il(&adjacency.keys, &adjacency.vals, &adjacency.lens, &adjacency.len, &adjacency.cap, u, list_append_int_new(map_get_il(adjacency.keys, adjacency.vals, adjacency.lens, adjacency.len, u, NULL), adjacency.lens[(int)(u)], (Neighbor){.node = v, .cost = w}), map_len_il(adjacency.keys, adjacency.vals, adjacency.lens, adjacency.len, u) + 1);
        map_set_il(&adjacency.keys, &adjacency.vals, &adjacency.lens, &adjacency.len, &adjacency.cap, v, list_append_int_new(map_get_il(adjacency.keys, adjacency.vals, adjacency.lens, adjacency.len, v, NULL), adjacency.lens[(int)(v)], (Neighbor){.node = u, .cost = w}), map_len_il(adjacency.keys, adjacency.vals, adjacency.lens, adjacency.len, v) + 1);
    }
    EdgePair *result = prims_algorithm(adjacency);
    size_t result_len = prims_algorithm_len;
    static const char* seen_keys[16] = {};
    static int seen_vals[16] = {};
    size_t seen_len = 0;
    MapSI seen = { seen_keys, seen_vals, 0, 16 };
    for (size_t __i = 0; __i < result_len; __i++) {
        EdgePair e = result[__i];
        const char* key1 = str_concat(str_concat(str_int(e.u), ","), str_int(e.v));
        const char* key2 = str_concat(str_concat(str_int(e.v), ","), str_int(e.u));
        map_set_si(&seen, key1, 1LL);
        map_set_si(&seen, key2, 1LL);
    }
    long long expected_0[3] = {7LL, 6LL, 1LL};
    long long expected_1[3] = {2LL, 8LL, 2LL};
    long long expected_2[3] = {6LL, 5LL, 2LL};
    long long expected_3[3] = {0LL, 1LL, 4LL};
    long long expected_4[3] = {2LL, 5LL, 4LL};
    long long expected_5[3] = {2LL, 3LL, 7LL};
    long long expected_6[3] = {0LL, 7LL, 8LL};
    long long expected_7[3] = {3LL, 4LL, 9LL};
    long long *expected_init[8] = {expected_0, expected_1, expected_2, expected_3, expected_4, expected_5, expected_6, expected_7};
    long long **expected = expected_init;
    size_t expected_len = 8;
    size_t expected_lens_init[8] = {3, 3, 3, 3, 3, 3, 3, 3};
    size_t *expected_lens = expected_lens_init;
    size_t expected_lens_len = 8;
    for (size_t __i = 0; __i < expected_len; __i++) {
        long long *ans = expected[__i];
        size_t ans_len = expected_lens[__i];
        const char* key = str_concat(str_concat(str_int(ans[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? ans_len + _mochi_idx : _mochi_idx;})]), ","), str_int(ans[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? ans_len + _mochi_idx : _mochi_idx;})]));
        if (!(map_get_si(seen.keys, seen.vals, seen.len, key))) {
            return 0LL;
        }
    }
    return 1LL;
}

int main(void) {
    {
        long long __start = _now();
        printf("%d\n", test_prim_successful_result());
        printf("%d\n", 1LL);
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
